--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "react-toggle": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
