--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tide",
+  "homepage": "https://http://thisimagedoesnotexist.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
@@ -16,6 +18,8 @@
     "react-toggle": "^4.1.2"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
