added meta tags

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tide",
-  "homepage": "https://http://thisimagedoesnotexist.com",
+  "homepage": "https://thisimagedoesnotexist.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
