--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-scripts": "^3.4.1",
-    "react-share": "^4.4.0"
+    "react-share": "^4.4.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "predeploy": "yarn run build",
