--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "predeploy": "yarn run build",
     "deploy": "echo \"thisimagedoesnotexist.com\" > build/CNAME && gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
