--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-ga4": "^1.4.1",
     "react-scripts": "^3.4.1",
     "react-share": "^4.4.0",
     "uuid": "^8.3.2"
